; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_strcase.c_Curl_safe_strcasecompare.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_strcase.c_Curl_safe_strcasecompare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Curl_safe_strcasecompare(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %15

8:                                                ; preds = %2
  %9 = load i8*, i8** %5, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %8
  %12 = load i8*, i8** %4, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = call i32 @Curl_strcasecompare(i8* %12, i8* %13)
  store i32 %14, i32* %3, align 4
  br label %24

15:                                               ; preds = %8, %2
  %16 = load i8*, i8** %4, align 8
  %17 = icmp eq i8* null, %16
  br i1 %17, label %18, label %21

18:                                               ; preds = %15
  %19 = load i8*, i8** %5, align 8
  %20 = icmp eq i8* null, %19
  br label %21

21:                                               ; preds = %18, %15
  %22 = phi i1 [ false, %15 ], [ %20, %18 ]
  %23 = zext i1 %22 to i32
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %21, %11
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @Curl_strcasecompare(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
